kubernetes/manifests/apps/rstudio/rstudio-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: rstudio
  labels:
    app: rstudio
spec:
  type: ClusterIP
  ports:
  - name: mariadb
    port: 8787
    targetPort: rstudio
  selector:
    app: rstudio
