kubernetes/manifests/apps/rstudio/rstudio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rstudio
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: rstudio
          servicePort: 8787
